src/components/subcomponents/Promo/Promo.css
#home-promo {
    display: flex;
    flex-direction: column;
    justify-content: center;
    background-color: var(--hero-bg);
    border-radius: 20px;
    margin: 20px;
    padding: 0 4px;
}

#home-promo > #promo-img {
    margin-top: 32px;
    align-self: center;
    max-width: 207px;
    object-fit: contain;
}

#home-promo > #promo-content {
    display: flex;
    flex-direction: column;
}

#home-promo #discount {
    margin-top: 20px;
    margin-bottom: 0;
    color: var(--orange);
    font-family: 'DM Sans', sans-serif;
    font-size: 36px;
    font-weight: bold;
    align-self: center;
}

#home-promo #title {
    align-self: center;
    font-family: 'DM Sans', sans-serif;
    font-size: 48px;
    font-weight: bold;
    margin: 0;
}

#home-promo #caption {
    font-size: 14px;
    color: var(--dark-grey);
    margin-top: 20px;
    margin-bottom: 36px;
}

#home-promo #shop-now-button {
    display: flex;
    justify-content: center;
    align-items: center;
    color: var(--white);
    background-color: var(--black);
    font-size: 16px;
    font-weight: bold;
    border-radius: 10px;
    padding: 12px 80px;
    margin: 0 20px 40px;
    gap: 10px;
}

#home-promo #shop-now-button:hover {
    cursor: pointer;
}

@media screen and (width >=960px) {
    #home-promo {
        flex-direction: row-reverse;
        justify-content: space-evenly;
        align-items: center;
        margin: 20px 162px;
        padding: 20px 4.4vw;
        box-sizing: border-box;
        /* max-width: 1116px; */
    }

    #home-promo > #promo-content {
        align-items: flex-start;
    }

    #home-promo > #promo-img {
        min-width: 44%;
        margin: 53px 0;
        justify-self: end;
    }

    #home-promo #discount {
        font-size: 48px;
        align-self: flex-start;
        margin-top: 0;
        line-height: 56px;
    }

    #home-promo #title {
        font-size: 64px;
        align-self: flex-start;
        line-height: 73px;
    }

    #home-promo #caption {
        text-align: left;
        font-size: 20px;
        line-height: 30px;
        align-self: flex-start;
        margin: 40px 0 48px;
    }

    #home-promo #shop-now-button {
        align-self: left;
        margin-left: 0;
        font-size: 18px;
        padding: 20px 80px;
        align-self: flex-start;
        margin: 0;
    }
}

